--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@angular/forms": "^20.2.0",
         "@angular/platform-browser": "^20.2.0",
         "@angular/router": "^20.2.0",
+        "@eslint/js": "^9.35.0",
         "ng-zorro-antd": "^20.2.1",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
